cambio de foto de perfil

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/img/11zon_cropped.png" alt="Foto de perfil de Branco Blunda">
+                <img class="masthead-avatar mb-5" src="assets/img/fotoperfil.png" alt="Foto de perfil de Branco Blunda">
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading mb-0">Branco Blunda</h1>
                 <!-- Icon Divider-->
